--- a/vehicle_choice_game_tax_vote_all/Instructions2.html
+++ b/vehicle_choice_game_tax_vote_all/Instructions2.html
@@ -4,15 +4,18 @@
 
 {{ block content }}
 <p>
+    L'ordinateur va constituer aléatoirement des groupes de <b>6 participants</b>.
+    La composition des groupes <b>restera inchangée</b> durant toute l’expérience.
+    Vous ne pouvez pas identifier les autres membres de votre groupe et ces derniers ne peuvent pas vous identifier
     <br>
-    Au début de l'expérience l'ordinateur va constituer aléatoirement des groupes de <b>6 participants</b>.
-    La composition des groupes restera inchangée durant toute l’expérience.
-    Vous ne pouvez pas identifier les autres membres de votre groupe et ces derniers ne peuvent pas vous identifier.<br>
-    <br>
-    L’expérience comporte quatre parties, vous devez répondre à toutes les parties. Les trois premières parties comportent chacune deux étapes.
+    L’expérience comporte <b>quatre parties</b>, vous devez répondre à toutes les parties. Les trois premières parties comportent chacune deux étapes
+    durant lesquelles vous devrez prendre des décisions.
     La quatrième partie de l'expérience est un questionnaire.<br>
     <br>
-
+    La composition de l'expérience peut être résumée grâce à l'image suivante :
+    <br>
+    <center><img src="{{ static 'Images/forme.png' }}"/></center>
+    
 
 </p>
 
