--- a/vehicle_choice_game_tax_vote_all/Comprehension.html
+++ b/vehicle_choice_game_tax_vote_all/Comprehension.html
@@ -3,19 +3,19 @@
 {{ endblock }}
 {{ block content }}
     <p>
-        Nous allons vous poser quelques questions que vous devez répondre afin de vérifier que vous avez compris les instructions.<br>
+        Nous allons vous poser quelques questions auxquelles vous devez répondre afin de vérifier que vous avez compris les instructions.
+        <br>
+        <br>
+        Les différentes parties et étapes peuvent être résumées grâce au tableau suivant :
+        <br>
+        <br>
+        <center>  <img src="{{ static 'Images/Etapes.png' }}"/> <br>  </center>
         <br>
         <b>Questions de compréhension:</b><br>
         <br>
         <i>N'hésitez pas à relire les instructions sur votre table afin de répondre aux questions suivantes.</i>
     </p>
     {{ formfields }}
-    <br>
-    <br>
-    <p>
-        A la page suivante, une page d'attente sera affichée. Veuillez attendre que les autres
-        membres de votre groupe soient prêts afin de passer à la partie 1.
-    </p>
     {{ next_button }}
 
 {{ endblock }}
