--- a/vehicle_choice_game_tax_vote_all/Instructions3.html
+++ b/vehicle_choice_game_tax_vote_all/Instructions3.html
@@ -73,6 +73,36 @@
     <br>
     <br>
     <center><img src="{{ static 'Images/externalities.png' }}"/></center>
+    <br>
+    <br>
+    <b>Exemple:</b> Supposons que vous avez choisi l'option A et que trois membres de votre groupe ont choisi l'option C.
+    <br>
+    <br>
+    Votre paiement sera donc égal à :
+    <br>
+    <br>
+    <center>100+100-55-(5<span>&#215;</span>3) = 130</center> <br>
+    <br>
+    100 correspond à votre dotation initiale, 100 correspond à votre gain,
+    55 correspond au coût d'utilisation de l'option choisie
+    et 5<span>&#215;</span>3 correspond à la perte imposée par chaque membre de votre groupe ayant choisi l'option C.<br>
+    <br>
+    Après chaque période, votre paiement sera affiché sur votre écran pour la période concernée.<br>
+    <br>
+    Le tableau suivant résume les gains, les coûts et les dégâts de chaque option.<br>
+    <br>
+
+    {{ if player.id_in_group == 1 }} <center>  <img src="{{ static 'Images/J1.png' }}"/> </center> <br> {{ endif }}
+
+    {{ if player.id_in_group == 2 }} <center>  <img src="{{ static 'Images/J2.png' }}"/> </center> <br> {{ endif }}
+
+    {{ if player.id_in_group == 3 }} <center> <img src="{{ static 'Images/J3.png' }}"/> </center> <br> {{ endif }}
+
+    {{ if player.id_in_group == 4 }} <center>  <img src="{{ static 'Images/J4.png' }}"/> </center> <br> {{ endif }}
+
+    {{ if player.id_in_group == 5 }} <center>  <img src="{{ static 'Images/J5.png' }}"/> </center> <br> {{ endif }}
+
+    {{ if player.id_in_group == 6 }} <center>  <img src="{{ static 'Images/J6.png' }}"/> </center> <br> {{ endif }}
 </p>
 
 {{ next_button }}
