--- a/vehicle_choice_game_tax_vote_all/Instructions4.html
+++ b/vehicle_choice_game_tax_vote_all/Instructions4.html
@@ -1,41 +1,43 @@
 {{ block title }}
-<center><b> ETAPE 1 </b></center>
+
 {{ endblock }}
 
 {{ block content }}
 <p>
-    Les votes sont <i><b>importants</b></i>.<br>
-    <br>
-    Vous devez choisir si vous souhaitez <b>la mise en place d'une taxe ou non</b>.
-    Les membres de votre groupe devront aussi choisir s'il souhaitent la mise en place ou non de la taxe. <br>
-    <br>
-    Le résultat d'un des trois votes sera utilisé afin de déterminer si à l'étape 2 de la Partie 3 nous implémenterons ou pas une taxe.
-    Le vote qui sera utilisé sera déterminé grâce au tirage au sort d'une bille.<br>
+
+    <i>En quoi consiste la mise en place de la taxe?</i><br>
     <br>
     <br>
-    Nous allons constituer une urne composée de 30 billes:<br>
-    <ul>
-        <li>10 billes violettes</li>
-        <li>10 billes orange</li>
-        <li>10 billes bleues</li>
-    </ul>
+    S'il y a implémentation de la taxe les individus qui auront choisi
+    <b>l'option C</b> devront payer une <i>taxe</i> de <b>25 ECUs</b>.<br>
     <br>
-    Si une bille violette est choisie, alors le résultat du vote 1 sera implémenté.<br>
+    Les ECUs collectés en tant que taxe seront redistribués parmi les six membres du groupe de façon équitable.
     <br>
-    Si une bille orange est choisie, alors le résultat du vote 2 sera implémenté.<br>
+    Pour chaque période, si seulement un membre de votre groupe a choisi l'option C,
+    vous allez avoir une perte de 5 ECUs, mais vous allez recevoir 25/6= 4,16 ECUs supplémentaires à votre gain.<br>
     <br>
-    Si une bille bleue est tirée au sort, alors le résultat du vote 3 sera implémenté.<br>
+    Pour chaque période, si deux membres de votre groupe ont choisi l'option C,
+    alors vous allez avoir chacun une perte de 10 ECUs.
+    Chaque membre du groupe qui aura choisi l'option C devra payer 25 ECUs de taxe,
+    le total des taxes collectées s'élève à 50 ECUs.
+    Vous allez donc recevoir grâce à la redistribution de la taxe 50/6 = 8.333 ECUs, et ainsi de suite.<br>
+
     <br>
-Chacun des trois votes a <b>la même probabilité</b> d'être implementé, soit 1/3.<br>
+    <img src="{{ static 'Images/redistribution.png' }}"/><br>
     <br>
-    <center>  <img src="{{ static 'Images/urne.png' }}"/> <br>  </center>
+
+    Si vous choisissez l'option C, alors vous allez avoir une perte de 5 ECUs, et vous allez devoir payer une taxe de 25 ECUs.
+    Vous recevrez grâce à la redistribution de la taxe 4,16 ECUs (si vous êtes seul à avoir choisi l'option C).<br>
+
+    Lors de <b>l'étape 2 de la partie 2</b>, nous allons mettre en place une <b>taxe</b>.
+    Lors de chaque vote vous devez décider si vous souhaitez la mise en place ou non
+    d'une taxe à l'étape 2 de la Partie 3.<br>
+
     <br>
-    Si dans le vote tiré au sort, il y a égalité (3 oui et 3 non), le départage s'effectuera grâce à un lancer de dé.
-    Si le nombre est pair, alors il y aura la mise en place de la taxe.
-    Si le nombre est impair, alors il n'y aura pas de mise en place de la taxe.<br>
+    <img src="{{ static 'Images/Etapes.png' }}"/><br>
     <br>
-    Vous connaîtrez les résultats des différents votes de votre groupe après le vote 3. <br>
-    <br>
+
+
 </p>
 
 {{ next_button }}
