--- a/vehicle_choice_game_tax_vote_all/VehicleChoice.html
+++ b/vehicle_choice_game_tax_vote_all/VehicleChoice.html
@@ -3,6 +3,9 @@
 <p>
         <i><b>Etape 2</b></i> <br>
         <br>
+        {{ if player.round_number < Constants.stage2_round }}
+        <b>Il n'y a pas d'implémentation de taxe à cette partie !</b>
+        {{ endif }}
 
         {{ if player.round_number >= Constants.stage2_round }}
     <i>Rappel :</i> Lors de cette étape, <b>la taxe sera implémentée</b>.
@@ -10,7 +13,9 @@
         Le montant collecté des taxes sera redistribué de façon égale entre les membres du groupe.
         {{ endif }}
 
+        <center> <img src="{{ static 'Images/implementation_taxe.png' }}"/> </center> <br>
 
+        <br>
         <br>
         Cette étape comporte 10 périodes.<br>
         <br>
@@ -18,9 +23,14 @@
         individuelle <b>l'option que vous préférez entre l'option A, B et C</b>
         {{ if player.round_number >= Constants.stage2_round }}
         , en prenant en compte la présence d'une <b>taxe</b>{{ endif }}.
+        <br>
+        <br>
         Au début de chaque période, vous, ainsi que les cinq autres membres de votre groupe, disposez chacun d’une dotation de 100 ECUs. <br>
         <br>
-
+        Chaque membre du groupe ayant choisi l'option C imposera une perte de 5 ECUs à chaque membre du groupe.
+        Plus il y a de membres de votre groupe qui choisissent l'option C, plus les pertes sont importantes.
+        <br>
+        <br>
         Vous êtes à la période {{ stage_round }}. Il reste {{ stage_remaining }} périodes.<br>
         <br>
         Veuillez vous référer au tableau suivant afin de prendre votre choix:<br>
@@ -38,8 +48,11 @@
         {{ if player.id_in_group == 6 }} <center>  <img src="{{ static 'Images/J6.png' }}"/> </center>  <br> {{ endif }}
         <br>
 
+        {{ <center>  <img src="{{ static 'Images/externalities.png' }}"/> </center>  <br> }}
+        <br>
         {{ if current_stage == 2 }} <center>  <img src="{{ static 'Images/redistribution.png' }}"/> </center> {{ endif }}
-
+        Vous avez une calculatrice sur votre écran que vous pouvez utiliser afin de réaliser votre choix.<br>
+        
 </p>
 
     {{ formfields }}
