--- a/vehicle_choice_game_tax_vote_all/Vote.html
+++ b/vehicle_choice_game_tax_vote_all/Vote.html
@@ -1,14 +1,85 @@
 
     {{ block title }}
-    {{ if subsession.round_number == Constants.stage1_round }} <center> <b>Partie 1</b> </center>{{ endif }}
-    {{ if subsession.round_number == Constants.stage2_round }}<center>   <b>Partie 2</b> </center> {{ endif }}
-    {{ if subsession.round_number == Constants.stage3_round }} <center>  <b>Partie 3</b> </center> {{ endif }}
+
     {{ endblock }}
 
 
 {{ block content }}
 <p>
+    {{ if subsession.round_number == Constants.stage1_round}}
+    L'expérience commence à partir de maintenant.
+    {{ endif }}
+    <br>
+    <br>
+    {{ if subsession.round_number == Constants.stage1_round }} <center> <b>Partie 1</b> </center>{{ endif }}
+    {{ if subsession.round_number == Constants.stage2_round }}<center>   <b>Partie 2</b> </center> {{ endif }}
+    {{ if subsession.round_number == Constants.stage3_round }} <center>  <b>Partie 3</b> </center> {{ endif }}
+    <br>
+    <br>
     <i><b>Etape 1 (vote)</b></i> <br>
+    <br>
+    <b>Rappel : ce vote ne pourrait être appliqué qu'à la partie 3.</b>
+    <br>
+    <br>
+    <img src="{{ static 'Images/vote123.png' }}"/><br>
+    <br>
+    <br>
+    Vous devez voter pour ou contre l'implémentation de la taxe.
+    <br>
+    <br>
+    <b>Les membres de votre groupe devront aussi voter pour ou contre l'implémentation de la taxe.</b> <br>
+    <br>
+    <br>
+    <b>Rappel : ce vote ne pourrait être appliqué qu'à la partie 3.</b>
+    <br>
+    <br>
+    <i>En quoi consiste la mise en place de la taxe?</i> <br>
+    <br>
+    S'il y a implémentation de la taxe les individus qui auront choisi <b>l'option C</b> devront payer une <i>taxe</i> de <b>25 ECUs.</b><br>
+    <br>
+    Les ECUs collectés en tant que taxe seront <b>redistribués</b> parmi les six membres du groupe de façon équitable.
+    <br>
+    <br>
+    <i>En quoi consiste la mise en place de la taxe?</i><br>
+    <br>
+    <br>
+    S'il y a implémentation de la taxe les individus qui auront choisi
+    <b>l'option C</b> devront payer une <i>taxe</i> de <b>25 ECUs</b>.<br>
+    <br>
+    Les ECUs collectés en tant que taxe seront redistribués parmi les six membres du groupe de façon équitable.
+    <br>
+    Si seulement un membre (vous ou quelqu'un d'autre) de votre groupe a choisi l'option C,
+    vous allez avoir une perte de 5 ECUs, mais vous allez recevoir 25/6= 4,16 ECUs supplémentaires.<br>
+    <br>
+    Si deux membres (vous inclus) de votre groupe ont choisi l'option C, alors vous allez avoir une perte de 10 ECUs
+    Chaque membre du groupe qui aura choisi l'option C devra payer 25 ECUs de taxe,
+    le total des taxes collectées s'élève à 25 <span>&#215;</span> 2 = 50 ECUs.
+    Vous allez donc recevoir grâce à la redistribution de la taxe 50/6 = 8.333 ECUs, et ainsi de suite.<br>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <br>
+    <img src="{{ static 'Images/redistribution.png' }}"/><br>
     <br>
     Le vote de la partie
     {{ if subsession.round_number == Constants.stage1_round }}1{{ endif }}
@@ -18,17 +89,11 @@
     <br>
     Vous devez choisir si vous souhaitez la mise en place d'une taxe lors de l'étape 2 de la Partie 3.<br>
     <br>
-    <b>Les membres de votre groupe devront aussi choisir s'il souhaitent la mise en place ou non de la taxe.
-        Le résultat d'un des trois votes sera implémenté à l'étape 2 de la partie 3.</b> <br>
+
     <br>
     <img src="{{ static 'Images/Etapes.png' }}"/><br>
     <br>
-    <i>En quoi consiste la mise en place de la taxe?</i> <br>
-    <br>
-    A chaque étape 2, où il y a une mise en place de la taxe (Partie 2 et Partie 3 selon le résultat du vote Partie 3),
-    les individus qui auront choisi l'option C devront payer une taxe de <b>25 ECUs</b>.<br>
-    <br>
-    Les ECUs collectés en tant que taxe seront <b>redistribués</b> parmi les six membres du groupe de façon équitable.
+
 </p>
     {{ formfields }}
     {{ next_button }}
