--- a/vehicle_choice_game_tax_vote_all/Payoff.html
+++ b/vehicle_choice_game_tax_vote_all/Payoff.html
@@ -1,12 +1,12 @@
 {{ block title }}
-    <center>PAIEMENT FINAL</center>
+<center><b>PAIEMENT FINAL</b></center>
 {{ endblock }}
 
 {{ block content }}
     <p>
         La période {{ chosen_round }} de la partie {{ chosen_stage }} a été choisie aléatoirement afin de vous rémunérer.
 
-        <b>Vous avez gagné {{ payoff_final }} ECUs à cette période</b>.
+        <b>Vous avez gagné {{ payoff_final }} ECUs à cette période. Ceci correspond à  </b>.
 
         Afin de vous remercier pour votre participation, vous allez recevoir {{ participation_fee }} euros supplémentaires.
 
