--- a/my_simple_survey/Payoff.html
+++ b/my_simple_survey/Payoff.html
@@ -6,9 +6,9 @@
     <p>
         La période {{ chosen_round }} de la partie {{ chosen_stage }} a été choisie aléatoirement afin de vous rémunérer.
 
-        <b>Vous avez gagné {{ payoff_final }} ECUs à cette période</b>.
+        <b>Vous avez gagné {{ payoff_final }} ECUs à cette période. Ceci correspond à {{ converted_payoff }}</b>.
 
-        Afin de vous remercier pour votre participation, vous allez recevoir {{ participation_fee }} euros supplémentaires.
+        Afin de vous remercier pour votre participation, vous allez recevoir {{ participation_fee }} euros supplémentaires à votre gain.
 
         Au total vous allez recevoir {{ payoff_euro }}.<br>
         <br>
