--- a/vehicle_choice_game_tax_vote_all/Instructions4.html
+++ b/vehicle_choice_game_tax_vote_all/Instructions4.html
@@ -34,7 +34,7 @@
     d'une taxe à l'étape 2 de la Partie 3.<br>
 
     <br>
-    <img src="{{static 'Images/Etapes.png'}}"/><br>
+    <img src="{{ static 'Images/etapes.png' }}"/><br>
     <br>
 
 
