--- a/vehicle_choice_game_tax_vote_all/Comprehension.html
+++ b/vehicle_choice_game_tax_vote_all/Comprehension.html
@@ -9,7 +9,7 @@
         Les différentes parties et étapes peuvent être résumées grâce au tableau suivant :
         <br>
         <br>
-        <center>  <img src="{{ static 'Images/Etapes.png' }}"/> <br>  </center>
+        <center>  <img src="{{ static 'Images/etapes.png' }}"/> <br>  </center>
         <br>
         <b>Questions de compréhension:</b><br>
         <br>
