--- a/my_simple_survey/Payoff.html
+++ b/my_simple_survey/Payoff.html
@@ -6,11 +6,11 @@
     <p>
         La période {{ chosen_round }} de la partie {{ chosen_stage }} a été choisie aléatoirement afin de vous rémunérer.
 
-        <b>Vous avez gagné {{ payoff_final }} ECUs à cette période. Ceci correspond à {{ converted_payoff }}</b>.
+        <b>Vous avez gagné {{ payoff_final }} ECUs à cette période. Ceci correspond à {{ converted_payoff }} euros</b>.
 
         Afin de vous remercier pour votre participation, vous allez recevoir {{ participation_fee }} euros supplémentaires à votre gain.
 
-        Au total vous allez recevoir {{ payoff_euro }}.<br>
+        Au total vous allez recevoir {{ payoff_euro }} euros.<br>
         <br>
         <b>Veuillez attendre à votre place que l'expérimentateur vienne vous rémunérer.</b>
 
