--- a/vehicle_choice_game_tax_vote_all/Instructions3.html
+++ b/vehicle_choice_game_tax_vote_all/Instructions3.html
@@ -38,7 +38,7 @@
     et nous vous demanderons de choisir l'option que vous préférez entre les options A, B et C.
     <br>
     <br>
-    <b>Chaque option</b> vous rapportera un \textbf{gain différent} et chaque option a un <br>coût d'utilisation différent<br>.
+<b>Chaque option</b> vous rapportera un <b>gain différent</b> et chaque option a un <br>coût d'utilisation différent<br>.
     <br>
     <br>
     Si vous choisissez <b>l'option A</b> : <b>vous gagnez 100 ECUs</b>, vous subissez un coût d'utilisation <b>de 55 ECUs</b>
